--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
   "name": "multiestetica-frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --ext .js,.vue src --fix",
+    "format": "prettier --write 'src/**/*.{js,vue,scss,css,json,md}'"
   },
   "dependencies": {
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@vitejs/plugin-vue": "^5.2.3",
+    "eslint": "^9.27.0",
+    "eslint-plugin-vue": "^10.1.0",
+    "globals": "^16.2.0",
+    "prettier": "^3.5.3",
     "sass": "^1.89.0",
     "vite": "^6.3.5"
   }
