--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "vitest",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
     "format": "prettier --write 'src/**/*.{js,vue,scss,css,json,md}'"
   },
-  "dependencies": {
-    "vue": "^3.5.13"
-  },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
-    "@vitejs/plugin-vue": "^5.2.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.27.0",
     "eslint-plugin-vue": "^10.1.0",
     "globals": "^16.2.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
     "sass": "^1.89.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.1.4",
+    "vue": "^3.5.16"
   }
 }
